# cortex-loop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANDSCAPE_2026_AGENT_ENFORCEMENT_LOOPS.md  LICENSE  MISSION.md  README.md  SECURITY.md  START_HERE.md  SUPPORT.md  cortex.toml  pyproject.toml  todos.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_support.yml
.github/workflows/: ci.yml  package-check.yml
claude/: CLAUDE.md  settings.json
cortex/: __init__.py  adapters.py  challenges.py  cli.py  core.py  foundation.py  genome.py  graveyard.py  invariants.py  repomap.py  requirements.py  stop_contract.py  stop_payload.py  stop_policy.py  store.py  utils.py
cortex/hooks/: __init__.py  (+4 more)
docs/: AGENT_EVENT_SCHEMA.md  DEMO.md  DEPENDENCY_PROFILES.md  FLEET_OPERATIONS.md  GRAFT_POLICY.md  NATIVE_STOP_SUBMIT_DESIGN.md  RELEASE_CHECKLIST.md  REPOMAP_PARITY_CRITERIA.md  SECURE_DEFAULTS.md  SHARE_STATUS.md  TESTING_STARTER_PROMPTS.md  UPGRADE.md  WHY_CORTEX.md
examples/: cortex.toml
research/: EXTRACTION_PATTERNS.md  GRAFT_DISCIPLINE.md  INSPIRATION_ESSAY.md  README.md
tests/: conftest.py  test_adapters.py  test_agent_contract.py  test_challenges.py  test_cli.py  test_core.py  test_foundation.py  test_genome.py  test_graveyard.py  test_hooks.py  test_integration.py  test_invariants.py  test_repo_hygiene.py  test_repomap.py  test_stop_contract.py  test_stop_payload.py  test_stop_policy.py  test_store.py
tools/: repo_hygiene_check.py
(+56 files in other folders)
